--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@faker-js/faker": "^7.5.0",
     "@miragejs/graphql": "^0.1.13",
+    "@pinia/testing": "^0.0.14",
     "@vitejs/plugin-vue": "^3.0.3",
     "@vue/test-utils": "^2.0.2",
     "autoprefixer": "^10.4.12",
